fixed card align

--- a/src/style/app-fixed.module.css
+++ b/src/style/app-fixed.module.css
@@ -4065,7 +4065,7 @@
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
   border: none;
   height: 280px !important;
-  width: 404px !important;
+  width: 98% !important;
 }
 
 .settingsBody {
